load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "future.go",
    ],
    importmap = "berty.tech/go/vendor/github.com/libp2p/go-openssl/utils",
    importpath = "github.com/libp2p/go-openssl/utils",
    visibility = ["//visibility:public"],
)
